fix word break in user profile

--- a/ui/site/css/user/_show.scss
+++ b/ui/site/css/user/_show.scss
@@ -86,6 +86,7 @@
       }
     }
     .bio {
+      @extend %break-word;
       font-style: italic;
     }
   }
